--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 20vh;
+
+  .logo-container {
+    width: 100%;
+    flex: 1;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    border: 2px solid black;
+    box-sizing: border-box;
+    > div:first-child {
+      flex: 1;
+    }
+    > div img {
+      width: 140px;
+    }
+  }
+
+  .navlink-container {
+    flex: 1;
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    border: 2px solid pink;
+    box-sizing: border-box;
+  }
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+/* Login page */
