starting to create  home page

--- a/src/styles/Stays.css
+++ b/src/styles/Stays.css
@@ -95,3 +95,10 @@
     }
   }
   
+ #stays-main-container{
+  display: flex;
+  flex-direction: column;
+ }
+ #search-container{
+  display: flex;
+ }
