--- a/src/components/HomeComponents/Styles/HomeSearchBar.css
+++ b/src/components/HomeComponents/Styles/HomeSearchBar.css
@@ -1,6 +1,10 @@
 #search-container{
     display: flex;
     justify-content: center;
+    position: absolute;
+    bottom: -28px;
+    transform: translateX(-50%);
+    left: 50%;
 }
 #search-form{
     display: flex;
