--- a/src/components/Navbar_Compoennts/Styles/navbar.css
+++ b/src/components/Navbar_Compoennts/Styles/navbar.css
@@ -1,48 +1,63 @@
 .navbar-main-container {
+  position: relative;
   color: white;
-  background-color: #003b95;
-  padding: 0px 8%;
+  background-color: rgb(0, 53, 128);
+  padding: 0px 12%;
+  padding-bottom: 28px;
+  width: 100%;
 }
 .navbar-container {
-  display: flex;
-  /* padding: 0px 8%; */
-  flex-direction: column;
   width: 100%;
   height: auto;
-
-  .logo-container {
-    width: 100%;
-    flex: 1;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    border: 2px solid black;
-    box-sizing: border-box;
-    > div:first-child {
-      flex: 1;
-    }
-    > div img {
-      width: 140px;
-    }
-  }
-
-  .navlink-container {
-    flex: 1;
-    display: flex;
-    gap: 10px;
-    width: 100%;
-    border: 2px solid pink;
-    box-sizing: border-box;
-  }
+}
+.navbar-header {
+  width: 100%;
+  flex: 1;
+  padding: 12px 0px;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  /* border: 2px solid black; */
+  box-sizing: border-box;
+  justify-content: space-between;
+}
+.navlink-container {
+  flex: 1;
+  padding: 12px 0px;
+  display: flex;
+  gap: 18px;
+  width: 100%;
+}
+.navlink-container a {
+  color: white;
+  display: flex;
+  gap: 8px;
+  text-decoration: none;
+  padding: 8px;
+}
+a div {
+  font-size: 16px;
+}
+a.active {
+  border: 2px solid rgb(180, 173, 173);
+  border-radius: 24px;
 }
 
-#profile-icon-container {
+#navbar-right-container {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+}
+
+.menu-main-container{
   position: relative;
-  background-color: black;
-  margin-right: 10px;
+  display: inline;
 }
-#profile-menu {
+
+.menu-container{
   position: absolute;
-  right: 0;
-  /* display: none; */
+  top: 100%;
+  left: 0;
+  z-index: 1;
 }
+
