--- a/src/pages/styles/checkout.css
+++ b/src/pages/styles/checkout.css
@@ -3,18 +3,29 @@
     flex-direction: row;
     justify-content: center;
     gap: 20px;
+    margin-top: 20px;
 }
-#payment-section,#order-section{
+#payment-section{
     display: flex;
     flex-direction: column;
     border: 1px solid grey;
     padding: 20px;
     row-gap: 10px;
 }
-
+#order-section{
+    align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid grey;
+    padding: 20px;
+    row-gap: 2px;
+}
 #order-section p{
     display: flex;
     flex-direction: row;
     gap: 20px;
     justify-content: space-between;
+}
+input{
+    padding: 4px;
 }
