--- a/src/components/HomeComponents/Styles/HomeSearchBar.css
+++ b/src/components/HomeComponents/Styles/HomeSearchBar.css
@@ -26,7 +26,16 @@
 }
 .input-item{
   flex: 1;
+  display: flex;
+  height: 48px;
   cursor: pointer;
+  > input{
+    flex: 1;
+  }
+  > *{
+    display: flex;
+    outline: none;
+  }
 }
 #date-input-container {
   position: relative;
